# chat-analyzer

./: .gitignore  LICENSE  PROJECT.md  README.en.md  README.md  chat-analyzer-项目说明.md
backend/: pyproject.toml  test_qq_launcher_smoke.py
backend/app/: cli.py  main.py
backend/app/api/: analyze.py  backups.py  chats.py  config.py  dashboard.py  inbox.py  knowledge.py  messages.py  qq.py  scheduler.py  search.py  static.py  sync.py  tags.py  tasks.py  telegram.py  todos.py
backend/app/core/: config.py  database.py  runners.py  scheduler.py  tasks.py  time_utils.py
backend/app/models/: analyze.py  config.py  knowledge.py  scheduler.py  sync.py  tags.py  telegram.py
backend/app/services/: analyzer.py  backup.py  embedder.py  knowledge.py  pre_filter.py  tagger.py  triggers.py
backend/app/services/sync/: _common.py  qq.py  qq_launcher.py  qq_qce.py  telegram.py  telegram_live.py  wechat.py
backend/tests/: test_backend_behaviors.py
docs/plans/: 2026-04-30-review-findings-optimization.md  2026-05-09-status-and-next.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatProfileSheet.tsx  ErrorBoundary.tsx  GlobalTaskBar.tsx  KnowledgeReviewModal.tsx  MessageBadges.tsx  NotificationBell.tsx
frontend/src/hooks/: useAnalyzeRunner.ts
frontend/src/lib/: DetailPanelContext.tsx  api.ts  constants.ts  utils.ts
frontend/src/pages/: Chats.tsx  Dashboard.tsx  Inbox.tsx  Knowledge.tsx  Layout.tsx  Search.tsx  Settings.tsx  Tags.tsx  Timeline.tsx  Todos.tsx
(+14 files in other folders)
